--- a/uliweb_layout/config.ini
+++ b/uliweb_layout/config.ini
@@ -2,6 +2,8 @@
 REQUIRED_APPS = [
     'uliweb.contrib.staticfiles',
     'uliweb.contrib.template',
+    'uliweb.contrib.flashmessage',
+    'uliweb.contrib.session',
 
     'uliweb_ui',
 ]
