--- a/uliweb_layout/settings.ini
+++ b/uliweb_layout/settings.ini
@@ -3,6 +3,7 @@
 logo_url = '/'
 logo_mini = 'L'
 logo_lg = 'Logo'
+skin = 'skin-blue'
 
 #footer description
 footer = '''    <div class="pull-right hidden-xs">
