--- a/uliweb_layout/settings.ini
+++ b/uliweb_layout/settings.ini
@@ -18,7 +18,7 @@ adminlte = {
     'toplinks': [
         'adminlte/{version}/css/AdminLTE.min.css',
         'adminlte/{version}/css/skins/_all-skins.min.css',
-        'adminlte/{version}/js/app.js',
+        'adminlte/{version}/js/app.min.js',
     ],
     'config':{'version':'UI_VERSION/adminlte'},
 }
