improve layout add form

--- a/uliweb_layout/layout/settings.ini
+++ b/uliweb_layout/layout/settings.ini
@@ -9,8 +9,7 @@ skin = 'skin-blue'
 footer = '''    <div class="pull-right hidden-xs">
       <b>Version</b> 1.0
     </div>
-    <strong>Copyright &copyright; 2015-2016 Uliweb-Layout. CSS framework by <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong>
-    reserved.
+    <strong>Copyright &copy; 2015-2016 Uliweb-Layout. </strong>
 '''
 
 [TEMPLATE_USE]
