--- a/uliweb_layout/menu/settings.ini
+++ b/uliweb_layout/menu/settings.ini
@@ -2,10 +2,16 @@
 #basic menu definition
 #menu_name = {'parent':'', 'title':'xxx', 'subs':[]}
 
+SIDEMENU = {}
+MAINMENU = {}
+
 [MENUS_CONFIG]
 validators = ['#{appname}.default_validators']
 pjax = True
 sidemenu = 'SIDEMENU'
+menu = 'MAINMENU'
+navigation_render = None
+menu_render = None
 
 [FUNCTIONS]
 menu = '#{appname}.menu'
