Fix layout and menu, add mailmenu and sidemenu to template environment

--- a/uliweb_layout/menu/settings.ini
+++ b/uliweb_layout/menu/settings.ini
@@ -19,3 +19,4 @@ navigation = '#{appname}.navigation'
 
 [BINDS]
 menu.after_init_apps = 'after_init_apps', '#{appname}.after_init_apps'
+menu.startup_installed = 'startup_installed', '#{appname}.startup_installed'
