change sidebar position to content_wrapper add layout.css

--- a/uliweb_layout/layout/settings.ini
+++ b/uliweb_layout/layout/settings.ini
@@ -3,7 +3,7 @@
 logo_url = '/'
 logo_mini = 'L'
 logo_lg = 'Logo'
-skin = 'skin-blue'
+skin = 'skin-blue-light'
 
 #footer description
 footer = '''    <div class="pull-right hidden-xs">
@@ -41,4 +41,4 @@ new_ui_scripts = {
 adminlte = '2.3.2'
 
 [FORMS]
-QueryForm = '#{appname}.query_forms.QueryForm'
+#QueryForm = '#{appname}.query_forms.QueryForm'
