add detail layout class definition support fix RadioBuild value process bug

--- a/uliweb_layout/layout/settings.ini
+++ b/uliweb_layout/layout/settings.ini
@@ -40,5 +40,5 @@ new_ui_scripts = {
 [UI_VERSION]
 adminlte = '2.3.2'
 
-[FORMS]
-#QueryForm = '#{appname}.query_forms.QueryForm'
+[DETAIL_LAYOUT_CLASSES]
+bs3dt = '#{appname}.detail_layout.Bootstrap3DetailTableLayout'
