Add breadcrumb function

--- a/uliweb_layout/menu/settings.ini
+++ b/uliweb_layout/menu/settings.ini
@@ -16,6 +16,7 @@ menu_render = None
 [FUNCTIONS]
 menu = '#{appname}.menu'
 navigation = '#{appname}.navigation'
+breadcrumb = '#{appname}.breadcrumb'
 
 [BINDS]
 menu.after_init_apps = 'after_init_apps', '#{appname}.after_init_apps'
